Started cleaning up a ton of the styling issues that keep cropping up around Atheos. Mainly just fine tuning the look and feel and hopefully coming to fix the awful dialog boxes

--- a/themes/atheos/modules/codegit/_blame.scss
+++ b/themes/atheos/modules/codegit/_blame.scss
@@ -23,7 +23,7 @@
 
 			&.line {
 				@include border(1px, right);
-				color: $font-color-subtle;
+				color: $fontColorMinor;
 				white-space: pre;
 			}
 
