--- a/themes/atheos/modules/codegit/_log.scss
+++ b/themes/atheos/modules/codegit/_log.scss
@@ -13,7 +13,7 @@
 
 	.hash {
 		display: inline;
-		color: $font-color-subtle;
+		color: $fontColorMinor;
 
 		a,
 		span {
@@ -24,14 +24,14 @@
 	}
 
 	.date {
-		color: $font-color-subtle;
+		color: $fontColorMinor;
 		user-select: none;
 		float: right;
 	}
 
 	.author {
 		display: block;
-		color: $font-color-subtle;
+		color: $fontColorMinor;
 
 		span {
 			color: $blue;
@@ -39,7 +39,7 @@
 	}
 
 	.message {
-		color: $font-color-primary;
+		color: $fontColorMajor;
 		margin: 5px 0;
 	}
 }
