--- a/themes/atheos/modules/common/_typography.scss
+++ b/themes/atheos/modules/common/_typography.scss
@@ -29,15 +29,8 @@ a:visited {
 	font-weight: bold;
 }
 
-/* FORMS */
-label {
-	display: block;
-	font-size: 18px;
-}
-
-
 pre {
-	background: $input-background;
+	background: $inputBackground;
 	padding: 10px;
 	margin: 5px 0;
 	font-family: monospace;
@@ -59,23 +52,17 @@ h4 {
 }
 
 h1 {
-	font-size: 24px;
-	padding: 2px 8px;
-	font-weight: 700;
-	// background-color: $dark-blue;
-	background-color: $foreground;
-
+	font-size: $fontSizeH1;
 }
 
 h2 {
-	font-size: 20px;
-
+	font-size: $fontSizeH2;
 }
 
 h3 {
-	font-size: 18px;
+	font-size: $fontSizeH3;
 }
 
 h4 {
-	font-size: 16px;
+	font-size: $fontSizeH4;
 }
